Branding and styling updates

--- a/public/sass/pages/_explore.scss
+++ b/public/sass/pages/_explore.scss
@@ -1,7 +1,7 @@
 .explore-active-button {
   box-shadow: $btn-active-box-shadow;
-  border: 1px solid $orange-dark !important;
-  color: $orange-dark !important;
+  border: 1px solid $ni-green-dark !important;
+  color: $ni-green-dark !important;
 }
 
 // TODO: this is used in Loki & Prometheus, move it
