--- a/public/sass/_variables.dark.generated.scss
+++ b/public/sass/_variables.dark.generated.scss
@@ -112,9 +112,8 @@ $text-shadow-faint: 1px 1px 4px rgb(45, 45, 45);
 $textShadow: none;
 
 // gradients
-// Fork: NI-specific colors
-$brand-gradient-horizontal: linear-gradient(to right, #009B65 30%, #26A97C 99%);
-$brand-gradient-vertical: linear-gradient(#009B65 30%, #26A97C 99%);
+$brand-gradient-horizontal: linear-gradient(270deg, #F55F3E 0%, #FF8833 100%);
+$brand-gradient-vertical: linear-gradient(0.01deg, #F55F3E 0.01%, #FF8833 99.99%);
 
 // Links
 // -------------------------
@@ -406,3 +405,7 @@ $vertical-resize-handle-dots-hover: $gray-2;
 // Calendar
 $calendar-bg-days: $input-bg;
 $calendar-bg-now: $dark-10;
+
+// NI Colors
+$ni-green-light: #26A97C;
+$ni-green-dark: #009B65;
