--- a/public/sass/_variables.light.generated.scss
+++ b/public/sass/_variables.light.generated.scss
@@ -107,9 +107,8 @@ $text-blue: #1F62E0;
 $text-shadow-faint: none;
 
 // gradients
-// Fork: NI-specific colors
-$brand-gradient-horizontal: linear-gradient(to right, #009B65 30%, #26A97C 99%);
-$brand-gradient-vertical: linear-gradient(#009B65 30%, #26A97C 99%);
+$brand-gradient-horizontal: linear-gradient(90deg, #26A97C 0%, #009B65 100%);;
+$brand-gradient-vertical: linear-gradient(0.01deg, #009B65 -31.2%, #26A97C 113.07%);;
 
 // Links
 // -------------------------
@@ -404,3 +403,6 @@ $vertical-resize-handle-dots-hover: $gray-2;
 $calendar-bg-days: $white;
 $calendar-bg-now: $gray-6;
 
+// NI Colors
+$ni-green-light: #26A97C;
+$ni-green-dark: #009B65;
